<resources>
    <string name="app_name">micromax tv</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>
    <string name="todo19">TODO</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo25">TODO</string>
    <string name="volume">VOLUME</string>
    <string name="channel">CHANNEL</string>
    <string name="todo27">TODO</string>
    <string name="todo28">TODO</string>
    <string name="todo29">TODO</string>
</resources>
